feat: add ACM cert + custom domains for CloudFront
Infrastructure Changes:
- Add variables for frontend_domain (www.akara.studio) and admin_domain (admin.akara.studio)
- Add acm_certificate_arn variable for SSL certificate
- Configure CloudFront distributions with custom domain aliases
- Replace default SSL with ACM certificate using SNI-only and TLS 1.2+
- Add domain outputs for reference

GitHub Actions Changes:
- Export ACM certificate ARN from secrets to Terraform
- Add TF_VAR_acm_certificate_arn environment variable
- Support for SSL-enabled custom domains in deployment pipeline

Requires:
1. ACM certificate for *.akara.studio in us-east-1
2. GitHub secret ACM_CERT_ARN with certificate ARN
3. DNS validation CNAMEs added to Squarespace

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -197,12 +197,19 @@ jobs:
           terraform -chdir=infra/terraform fmt -check -recursive || true
           git --no-pager diff -- infra/terraform || true
 
+      - name: Export TF vars (ACM)
+        run: |
+          echo "Using ACM cert: ${{ secrets.ACM_CERT_ARN }}"
+          export TF_VAR_acm_certificate_arn='${{ secrets.ACM_CERT_ARN }}'
+          echo "TF var set"
+
       - name: Run Terraform with comprehensive logging
         env:
           ACCOUNT_ID: ${{ steps.awsinfo.outputs.ACCOUNT_ID }}
           AWS_REGION: ${{ steps.awsinfo.outputs.AWS_REGION }}
           STATE_BUCKET: ${{ steps.awsinfo.outputs.TF_STATE_BUCKET }}
           LOCK_TABLE: ${{ steps.awsinfo.outputs.TF_LOCK_TABLE }}
+          TF_VAR_acm_certificate_arn: ${{ secrets.ACM_CERT_ARN }}
         run: |
           set -euxo pipefail
           terraform -version
