feat(cloudfront): add alias ownership diagnostic and import workflow
Diagnostic Features:
- Add CloudFront alias ownership check before Terraform apply
- Query for existing distributions using admin.akara.studio and www.akara.studio
- Display conflicting distribution IDs, domains, and status in table format
- Helps identify CNAMEAlreadyExists conflicts before deployment

Import Workflow:
- Add alias-import.yml for manual CloudFront distribution import
- Allows importing existing distributions into Terraform state
- Supports workflow_dispatch with distribution ID input
- Bootstraps Terraform backend and imports aws_cloudfront_distribution.admin
- Shows reconciliation plan after import

Resolves CNAMEAlreadyExists errors by:
1. Diagnosing which distribution currently owns the alias
2. Providing safe import path instead of blind deletion
3. Allowing Terraform to manage existing distributions properly

Usage: Run diagnostic first, then use import workflow if needed.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -222,6 +222,24 @@ jobs:
             -input=false -no-color 2>&1 | tee tf-init.log
 
           terraform -chdir=infra/terraform validate -no-color 2>&1 | tee tf-validate.log
+
+      - name: Diagnose CloudFront alias ownership
+        run: |
+          set -euo pipefail
+          echo "Looking for current owners of aliases…"
+          echo "— admin.akara.studio —"
+          aws cloudfront list-distributions \
+            --query "DistributionList.Items[?Aliases.Items && contains(join(',',Aliases.Items), 'admin.akara.studio')].[Id,DomainName,Aliases.Items,Status]" \
+            --output table || true
+
+          echo ""
+          echo "— www.akara.studio —"
+          aws cloudfront list-distributions \
+            --query "DistributionList.Items[?Aliases.Items && contains(join(',',Aliases.Items), 'www.akara.studio')].[Id,DomainName,Aliases.Items,Status]" \
+            --output table || true
+
+      - name: Continue Terraform deployment
+        run: |
           terraform -chdir=infra/terraform plan -input=false -no-color -lock-timeout=5m -out=plan.out 2>&1 | tee tf-plan.log
           terraform -chdir=infra/terraform apply -input=false -no-color plan.out 2>&1 | tee tf-apply.log
 
