feat: implement Phase 2 - Auth, Assets, Minimal API, Admin Uploads, Catalog Render
Infrastructure (Terraform):
- Add S3 assets bucket with CloudFront OAC integration
- Add DynamoDB tables: catalog, users, orders with proper schemas
- Add Cognito User Pool with admin/user groups and app client
- Add API Gateway HTTP API with CORS for frontend/admin domains
- Add Lambda functions: getUploadUrl, getCatalog, postCatalog with Node.js 20
- Add Lambda IAM role with DynamoDB and S3 permissions
- Add Cognito JWT authorizer for protected endpoints
- Add assets origins and /content/* cache behaviors to both CloudFront distributions
- Add comprehensive outputs for API URL, Cognito IDs, and bucket names

Lambda Functions:
- getUploadUrl: Generates presigned S3 URLs for file uploads (admin-only)
- getCatalog: Queries DynamoDB catalog by type with pagination (public)
- postCatalog: Saves metadata to DynamoDB after upload (admin-only)
- Proper error handling and CORS headers for all functions

Admin App (Next.js):
- Add /login page with Cognito Hosted UI integration
- Add /upload page with file upload and metadata form
- Add /auth/callback page for OAuth flow completion
- Add navigation links in layout header
- Support for wallpaper and music content types
- Environment variable integration for API and Cognito

Frontend App (Next.js):
- Update WallpapersGallery to fetch from catalog API
- Update MusicGallery with vinyl player and API integration
- Add proper error handling and loading states
- Support for /content/* CDN paths for assets
- Filter functionality based on content attributes

CI/CD Pipeline:
- Export all Terraform outputs as environment variables
- Build apps with proper API URLs, Cognito config, and CDN paths
- Support for both frontend and admin asset serving via /content/*
- Lambda function packaging and deployment preparation

Acceptance Criteria Ready:
1. Cognito authentication flow (/login → hosted UI → callback)
2. File upload flow (upload form → presigned URL → 

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -340,12 +340,20 @@ jobs:
           echo "FRONTEND_BUCKET=$(jq -r .frontend_bucket.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "FRONTEND_DIST=$(jq -r .frontend_distribution_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "FRONTEND_DOMAIN=$(jq -r .frontend_domain.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "API_BASE_URL=$(jq -r .api_base_url.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "COGNITO_USER_POOL_ID=$(jq -r .cognito_user_pool_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "COGNITO_CLIENT_ID=$(jq -r .cognito_user_pool_client_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "AWS_REGION_OUTPUT=$(jq -r .aws_region.value infrastructure-outputs.json)" >> $GITHUB_ENV
 
       - name: Build Frontend
         working-directory: frontend
         env:
           NEXT_PUBLIC_CDN_URL: https://${{ env.FRONTEND_DOMAIN }}
-          NEXT_PUBLIC_API_URL: https://api.akara.studio
+          NEXT_PUBLIC_API_BASE_URL: ${{ env.API_BASE_URL }}
+          NEXT_PUBLIC_ASSETS_CDN_URL: https://${{ env.FRONTEND_DOMAIN }}/content
+          NEXT_PUBLIC_COGNITO_USER_POOL_ID: ${{ env.COGNITO_USER_POOL_ID }}
+          NEXT_PUBLIC_COGNITO_CLIENT_ID: ${{ env.COGNITO_CLIENT_ID }}
+          NEXT_PUBLIC_AWS_REGION: ${{ env.AWS_REGION_OUTPUT }}
           NEXT_PUBLIC_SITE_URL: ${{ needs.setup.outputs.environment == 'prod' && 'https://akara.studio' || 'https://staging.akara.studio' }}
           NEXT_PUBLIC_ENVIRONMENT: ${{ needs.setup.outputs.environment }}
         run: |
@@ -450,15 +458,19 @@ jobs:
           echo "ADMIN_BUCKET=$(jq -r .admin_bucket.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "ADMIN_DIST=$(jq -r .admin_distribution_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
           echo "ADMIN_DOMAIN=$(jq -r .admin_domain.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "API_BASE_URL=$(jq -r .api_base_url.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "COGNITO_USER_POOL_ID=$(jq -r .cognito_user_pool_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "COGNITO_CLIENT_ID=$(jq -r .cognito_user_pool_client_id.value infrastructure-outputs.json)" >> $GITHUB_ENV
+          echo "AWS_REGION_OUTPUT=$(jq -r .aws_region.value infrastructure-outputs.json)" >> $GITHUB_ENV
 
       - name: Build Admin
         working-directory: admin
         env:
-          NEXT_PUBLIC_AWS_REGION: ${{ env.AWS_REGION }}
-          NEXT_PUBLIC_COGNITO_USER_POOL_ID: placeholder-pool
-          NEXT_PUBLIC_COGNITO_CLIENT_ID: placeholder-client
-          NEXT_PUBLIC_API_URL: https://api.akara.studio
-          NEXT_PUBLIC_S3_BUCKET: ${{ env.ADMIN_BUCKET }}
+          NEXT_PUBLIC_API_BASE_URL: ${{ env.API_BASE_URL }}
+          NEXT_PUBLIC_ASSETS_CDN_URL: https://${{ env.ADMIN_DOMAIN }}/content
+          NEXT_PUBLIC_COGNITO_USER_POOL_ID: ${{ env.COGNITO_USER_POOL_ID }}
+          NEXT_PUBLIC_COGNITO_CLIENT_ID: ${{ env.COGNITO_CLIENT_ID }}
+          NEXT_PUBLIC_AWS_REGION: ${{ env.AWS_REGION_OUTPUT }}
           NEXT_PUBLIC_ENVIRONMENT: ${{ needs.setup.outputs.environment }}
         run: |
           if [ "${{ steps.detect_root_pm_admin.outputs.pm }}" = "npm" ]; then
