chore: remove unsupported TF cognito groups; create groups via CLI in CI
Terraform Changes:
- Remove aws_cognito_user_pool_group resources for admin and user groups
- These resources are not supported in all Terraform AWS provider versions
- Keeps Cognito User Pool and Client resources intact

GitHub Actions Changes:
- Add 'Ensure Cognito groups exist' step after Terraform apply
- Create admin and user groups via aws cognito-idp create-group CLI commands
- Use || true to avoid failures if groups already exist
- Capture cognito_user_pool_id from Terraform outputs for group creation

Resolves potential Terraform deployment issues with Cognito group resources
while maintaining the same functional outcome via AWS CLI.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -260,6 +260,16 @@ jobs:
           echo "placeholder_bucket=$(terraform -chdir=infra/terraform output -raw placeholder_bucket)" >> $GITHUB_OUTPUT
           echo "account_id=$(terraform -chdir=infra/terraform output -raw account_id)" >> $GITHUB_OUTPUT
           echo "region=$(terraform -chdir=infra/terraform output -raw region)" >> $GITHUB_OUTPUT
+          echo "cognito_user_pool_id=$(terraform -chdir=infra/terraform output -raw cognito_user_pool_id)" >> $GITHUB_OUTPUT
+
+      - name: Ensure Cognito groups exist
+        if: ${{ inputs.deploy_infra == 'true' }}
+        env:
+          COGNITO_POOL_ID: ${{ steps.tf_output.outputs.cognito_user_pool_id }}
+        run: |
+          set -euo pipefail
+          aws cognito-idp create-group --user-pool-id "$COGNITO_POOL_ID" --group-name admin || true
+          aws cognito-idp create-group --user-pool-id "$COGNITO_POOL_ID" --group-name user  || true
 
       - name: Save Infrastructure Outputs
         run: |
