feat(lambda): improve Lambda deployment with proper packaging and dependencies
Terraform Lambda Improvements:
- Use absolute module paths (${path.module}/filename.zip) for ZIP files
- Add source_code_hash = filebase64sha256() to detect ZIP changes
- Add explicit depends_on for resources referenced in environment variables
- Ensures S3 bucket exists before get_upload_url Lambda creation
- Ensures DynamoDB table exists before get_catalog/post_catalog creation
- Forces Lambda updates when function code changes

GitHub Actions Packaging:
- Add 'Package Lambda functions' step before Terraform plan
- Create ZIPs from lambdas/src/{function}/* source directories
- Move ZIPs to infra/terraform/ where Terraform expects them
- Add sanity check listing of ZIP files before plan/apply
- Add 'Show TF inputs snapshot' to verify ACM ARN and ZIP presence

Benefits:
- Eliminates Lambda deployment race conditions
- Proper change detection for function updates
- Clear visibility into packaging success/failure
- Resolves 'file not found' errors for Lambda ZIP files

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -258,6 +258,35 @@ jobs:
         env:
           FRONTEND_DIST_ID: EBWBTLYBASPTD
 
+      - name: Package Lambda functions
+        run: |
+          set -euo pipefail
+          pushd lambdas
+
+          # clean & build
+          rm -f get_upload_url.zip get_catalog.zip post_catalog.zip
+
+          zip -rq get_upload_url.zip src/getUploadUrl/*
+          zip -rq get_catalog.zip src/getCatalog/*
+          zip -rq post_catalog.zip src/postCatalog/*
+
+          popd
+
+          # move zips into module folder used by -chdir
+          mv lambdas/get_upload_url.zip infra/terraform/
+          mv lambdas/get_catalog.zip infra/terraform/
+          mv lambdas/post_catalog.zip infra/terraform/
+
+          # sanity check before plan/apply
+          ls -lah infra/terraform/*.zip
+
+      - name: Show TF inputs snapshot
+        run: |
+          set -euo pipefail
+          echo "ACM_CERT_ARN=${ACM_CERT_ARN:-(unset)}"
+          echo "Expecting ZIPs:"
+          ls -lah infra/terraform/*.zip
+
       - name: Run Terraform plan
         run: |
           terraform -chdir=infra/terraform init -input=false -upgrade
